Cleanup a few deprecations and unnecessary usages of Guava collections